# trip_Planner

./: pyproject.toml
src/trip_planner/: __init__.py  main.py
src/trip_planner/trip_crew/: trip_agents.py
src/trip_planner/trip_task-crew/: trip_tasks.py
