[project]
name = "trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali-Ahmed999", email = "hafizaliahmed2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "litellm>=1.60.2",
]

[project.scripts]
trip-planner = "trip_planner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
